# Niva-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  start.bat  start.sh
app/: asgi.py  config.py  settings.py  settings_dev.py  urls.py
interview_sessions/: interview_session_20250917_103346.json
niva_app/: app.py  response_renderer.py  urls.py
niva_app/api/agent_memory/: views.py
niva_app/api/agents/: serializers.py  views.py
niva_app/api/authentication/: exceptions.py  serializers.py  views.py
niva_app/api/common/: views.py
niva_app/api/company/: serializers.py  views.py  (+1 more)
niva_app/lib/: aws_secrets.py  llm.py  utils.py  validators.py
niva_app/migrations/: 0000_create_vector_extension.py  0001_initial.py  0002_course_language.py  0003_student_user.py
niva_app/models/: __init__.py  agents.py  base.py  course.py  dailycalls.py  dailyrooms.py  feedback.py  memory.py  rag.py  students.py  users.py  verification.py
niva_app/services/: agent.py  agent_memory.py  company.py  company_phone.py  course.py  daily_service.py  email.py  feedback.py  local_storage.py  pipecat_agent.py  rag.py  s3_storage.py  storage.py  student.py  user.py
pipecat_agents/: apps.py  pipecat_agent_runner.py  urls.py
pipecat_agents/api/: common.py  views.py
pipecat_agents/services/: agent_context.py  agent_llm_service.py  agent_multimodal_service.py  agent_multimodal_tools.py  inbound_flow_service.py  microservice_auth.py  outbound_flow_service.py  permissions.py  pipecat_agent_service.py
tools/: wait-for-it.sh
(+12 files in other folders)
